--- a/index.html
+++ b/index.html
@@ -3,11 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Online Book Store Website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <h1>Hello</h1>
-        <h2>How are you Emon?</h2>
+
+<!---header section--->
+<header class="header">
+    <div class="header-1">
+       <a href="#" class="logo">
+           <i class="fas fa-book"></i> Online Book Store
+       </a>
+
+       <form action="" class="search-form">
+           <input type="search" name="" placeholder="search here...." id="search-box">
+           <label for="search-box" class="fas fa-search"></label>
+       </form>
+
+
+       <div class="icons">
+        <div id="search-btn" class="fas fa-search"></div>
+        <a href="#" class="fas fa-heart"></a>
+        <a href="#" class="fas fa-shopping-cart"></a>
+        <div id="login-btn" class="fas fa-user"></div>
+
+
+       </div>
+    </div>
+</header>
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script src="js/index.js"></script>    
     
 </body>
 </html>
