--- a/index.html
+++ b/index.html
@@ -31,10 +31,48 @@
 
        </div>
     </div>
-</header>
 
-</body>
-</html>
+
+    <div class="header-2">
+        <nav class="navbar">
+            <a href="#home">home</a>
+            <a href="#features">features</a>
+            <a href="#arrivals">arrivals</a>
+            <a href="#review">review</a>
+            <a href="#blogs">blogs</a>
+        </nav>
+    </div>
+</header>
+<!---header section ends--->
+
+<!-- bottom navbar  -->
+ <nav class="bottom-navbar">
+    <a href="#home" class="fas fa-home"></a>
+    <a href="#features" class="fas fa-list"></a>
+    <a href="#arrivals" class="fas fa-tags"></a>
+    <a href="#review" class="fas fa-comments"></a>
+    <a href="#blogs" class="fas fa-blogs"></a>
+ </nav>
+
+
+ <!---login form--->
+
+<div class="login-form-container">
+    <form action="">
+        <h3>sign in</h3>
+        <span>username</span>
+        <input type="email" name="" class="box" placeholder="enter your email" id="">
+        <span>password</span>
+        <input type="password" name="" class="box" placeholder="enter your password" id="">
+        <div class="checkbox">
+            <input type="checkbox" name="" id="remember-me">
+            <label for="remember-me">remember me</label>
+        </div>
+        <input type="submit" value="sign in" class="btn">
+        <p>forget password? <a href="#">click here</a></p>
+        <p>don't have an account? <a href="#">create one</a></p>
+    </form>
+</div>
 
 
 
