Featured section added

--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
                 <a href="#" class="swiper-slide"><img src="Images/book6.jpg" alt=""></a>
             </div>
             
-<!-- <!image is missig here!> -->
             <img src="Images/stand.jpg" class="stand" alt="">
 
             
@@ -158,6 +157,170 @@
 
 <!-- icon section ends  -->
 
+<!-- featured section starts  -->
+
+<section class="featured" id="featured">
+    <h1 class="heading"><span>featured books</span></h1>
+    <div class=" swiper featured-slider">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide box">
+                <div class="icons">
+                    <a href="#" class="fas fa-search"></a>
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="Images/book1.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>Dark Psychology</h3>
+                    <div class="price">$12.99 <span>17.99</span></div>
+                    <a href="#" class="btn">add to cart</a>
+                </div>
+            </div>
+            <div class="swiper-slide box">
+                <div class="icons">
+                    <a href="#" class="fas fa-search"></a>
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="Images/book2.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>Alice Feeney</h3>
+                    <div class="price">$16.99 <span>21.99</span></div>
+                    <a href="#" class="btn">add to cart</a>
+                </div>
+            </div>
+            <div class="swiper-slide box">
+                <div class="icons">
+                    <a href="#" class="fas fa-search"></a>
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="Images/book3.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>Harry Potter</h3>
+                    <div class="price">$25.99 <span>30.99</span></div>
+                    <a href="#" class="btn">add to cart</a>
+                </div>
+            </div>
+            <div class="swiper-slide box">
+                <div class="icons">
+                    <a href="#" class="fas fa-search"></a>
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="Images/book4.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>Eloquent Javascript</h3>
+                    <div class="price">$29.99 <span>34.99</span></div>
+                    <a href="#" class="btn">add to cart</a>
+                </div>
+            </div>
+            <div class="swiper-slide box">
+                <div class="icons">
+                    <a href="#" class="fas fa-search"></a>
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="Images/book5.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>HTML and CSS</h3>
+                    <div class="price">$17.99 <span>22.99</span></div>
+                    <a href="#" class="btn">add to cart</a>
+                </div>
+            </div>
+            <div class="swiper-slide box">
+                <div class="icons">
+                    <a href="#" class="fas fa-search"></a>
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="Images/book6.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>Dreyer's English</h3>
+                    <div class="price">$14.99 <span>19.99</span></div>
+                    <a href="#" class="btn">add to cart</a>
+                </div>
+            </div>
+            <div class="swiper-slide box">
+                <div class="icons">
+                    <a href="#" class="fas fa-search"></a>
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="Images/book7.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>Computer Studies</h3>
+                    <div class="price">$29.99 <span>34.99</span></div>
+                    <a href="#" class="btn">add to cart</a>
+                </div>
+            </div>
+            <div class="swiper-slide box">
+                <div class="icons">
+                    <a href="#" class="fas fa-search"></a>
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="Images/book8.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>Computer Science</h3>
+                    <div class="price">$31.99 <span>36.99</span></div>
+                    <a href="#" class="btn">add to cart</a>
+                </div>
+            </div>
+            <div class="swiper-slide box">
+                <div class="icons">
+                    <a href="#" class="fas fa-search"></a>
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="Images/book9.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>Technology and Society</h3>
+                    <div class="price">$28.99 <span>33.99</span></div>
+                    <a href="#" class="btn">add to cart</a>
+                </div>
+            </div>
+            <div class="swiper-slide box">
+                <div class="icons">
+                    <a href="#" class="fas fa-search"></a>
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="Images/book10.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>IT Tools and Application</h3>
+                    <div class="price">$19.99 <span>24.99</span></div>
+                    <a href="#" class="btn">add to cart</a>
+                </div>
+            </div>
+
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+    </div>
+</section>
+
+<!-- featured section ends  -->
 
 
 
