Featured section apdated

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <i class="fas fa-plane"></i>
         <div class="content">
             <h3>free shipping</h3>
-            <p>order over $100</p>
+            <p>On orders over $100</p>
         </div>
     </div>
 
@@ -132,7 +132,7 @@
         <i class="fas fa-lock"></i>
         <div class="content">
             <h3>secure payment</h3>
-            <p>100 secure payment</p>
+            <p>100 secure</p>
         </div>
     </div>
 
@@ -140,7 +140,7 @@
         <i class="fas fa-redo-alt"></i>
         <div class="content">
             <h3>easy returns</h3>
-            <p>10 days returns</p>
+            <p>Within 10 days</p>
         </div>
     </div>
 
@@ -160,7 +160,7 @@
 <!-- featured section starts  -->
 
 <section class="featured" id="featured">
-    <h1 class="heading"><span>featured books</span></h1>
+    <h1 class="heading"><span>Featured Books</span></h1>
     <div class=" swiper featured-slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide box">
@@ -174,8 +174,8 @@
                 </div>
                 <div class="content">
                     <h3>Dark Psychology</h3>
-                    <div class="price">$12.99 <span>17.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <div class="price">$12.99 <span>$17.99</span></div>
+                    <a href="#" class="btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -189,8 +189,8 @@
                 </div>
                 <div class="content">
                     <h3>Alice Feeney</h3>
-                    <div class="price">$16.99 <span>21.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <div class="price">$16.99 <span>$21.99</span></div>
+                    <a href="#" class="btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -204,8 +204,8 @@
                 </div>
                 <div class="content">
                     <h3>Harry Potter</h3>
-                    <div class="price">$25.99 <span>30.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <div class="price">$25.99 <span>$30.99</span></div>
+                    <a href="#" class="btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -219,8 +219,8 @@
                 </div>
                 <div class="content">
                     <h3>Eloquent Javascript</h3>
-                    <div class="price">$29.99 <span>34.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <div class="price">$29.99 <span>$34.99</span></div>
+                    <a href="#" class="btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -234,8 +234,8 @@
                 </div>
                 <div class="content">
                     <h3>HTML and CSS</h3>
-                    <div class="price">$17.99 <span>22.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <div class="price">$17.99 <span>$22.99</span></div>
+                    <a href="#" class="btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -249,7 +249,7 @@
                 </div>
                 <div class="content">
                     <h3>Dreyer's English</h3>
-                    <div class="price">$14.99 <span>19.99</span></div>
+                    <div class="price">$14.99 <span>$19.99</span></div>
                     <a href="#" class="btn">add to cart</a>
                 </div>
             </div>
@@ -264,8 +264,8 @@
                 </div>
                 <div class="content">
                     <h3>Computer Studies</h3>
-                    <div class="price">$29.99 <span>34.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <div class="price">$29.99 <span>$34.99</span></div>
+                    <a href="#" class="btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -279,8 +279,8 @@
                 </div>
                 <div class="content">
                     <h3>Computer Science</h3>
-                    <div class="price">$31.99 <span>36.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <div class="price">$31.99 <span>$36.99</span></div>
+                    <a href="#" class="btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -294,8 +294,8 @@
                 </div>
                 <div class="content">
                     <h3>Technology and Society</h3>
-                    <div class="price">$28.99 <span>33.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <div class="price">$28.99 <span>$33.99</span></div>
+                    <a href="#" class="btn">Add to Cart</a>
                 </div>
             </div>
             <div class="swiper-slide box">
@@ -309,8 +309,8 @@
                 </div>
                 <div class="content">
                     <h3>IT Tools and Application</h3>
-                    <div class="price">$19.99 <span>24.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <div class="price">$19.99 <span>$24.99</span></div>
+                    <a href="#" class="btn">Add to Cart</a>
                 </div>
             </div>
 
