Newsletter section added

--- a/index.html
+++ b/index.html
@@ -322,6 +322,17 @@
 
 <!-- featured section ends  -->
 
+<!-- newsletter section starts  -->
+
+<section class="newsletter">
+    <form action="">
+        <h3>Subscribe for latest updates</h3>
+        <input type="email" name="" placeholder="Enter your e-mail address" id="" class="box">
+        <input type="submit" value="Subscribe" class="btn">
+    </form>
+</section>
+
+<!-- newsletter section ends  -->
 
 
 
