--- a/index.html
+++ b/index.html
@@ -339,14 +339,30 @@
 <section class="arrivals" id="arrivals">
     <h1 class="heading"> <span>new arrivals</span></h1>
     <div class="arrivals-slider">
-        <div class="wraper">
+        <div class="wrapper">
                  <a href="#" class="box">
                     <div class="image">
-                        <img src="Images/book1.jpg" alt="">
+                        <img src="Images/book1.jpg" alt="Dark Psychology Book Cover">
                     </div>
                     <div class="content">
-                        <h3>new arrivals</h3>
-                        <div class="price">$15.90 <span>$20.99</span></div>
+                        <h3>Dark Psychology</h3>
+                        <div class="price">$12.99 <span>$17.99</span></div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
+                 </a>
+                 <a href="#" class="box">
+                    <div class="image">
+                        <img src="Images/book2.jpg" alt="Alice Feeney Book Cover">
+                    </div>
+                    <div class="content">
+                        <h3>Alice Feeney</h3>
+                        <div class="price">$16.99 <span>$21.99</span></div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -358,11 +374,27 @@
                  </a>
                  <a href="#" class="box">
                     <div class="image">
-                        <img src="Images/book2.jpg" alt="">
+                        <img src="Images/book3.jpg" alt="Harry Potter Book Cover">
                     </div>
                     <div class="content">
-                        <h3>new arrivals</h3>
-                        <div class="price">$15.90 <span>$20.99</span></div>
+                        <h3>Harry Potter</h3>
+                        <div class="price">$25.99 <span>$30.99</span></div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
+                 </a>
+                 <a href="#" class="box">
+                    <div class="image">
+                        <img src="Images/book4.jpg" alt="Eloquent JavaScript Book Cover">
+                    </div>
+                    <div class="content">
+                        <h3>Eloquent JavaScript</h3>
+                        <div class="price">$29.99 <span>$34.99</span></div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -374,49 +406,17 @@
                  </a>
                  <a href="#" class="box">
                     <div class="image">
-                        <img src="Images/book3.jpg" alt="">
+                        <img src="Images/book5.jpg" alt="HTML and CSS Book Cover">
                     </div>
                     <div class="content">
-                        <h3>new arrivals</h3>
-                        <div class="price">$15.90 <span>$20.99</span></div>
+                        <h3>HTML and CSS</h3>
+                        <div class="price">$17.99 <span>$22.99</span></div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                        </div>
-                    </div>
-                 </a>
-                 <a href="#" class="box">
-                    <div class="image">
-                        <img src="Images/book4.jpg" alt="">
-                    </div>
-                    <div class="content">
-                        <h3>new arrivals</h3>
-                        <div class="price">$15.90 <span>$20.99</span></div>
-                        <div class="stars">
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                        </div>
-                    </div>
-                 </a>
-                 <a href="#" class="box">
-                    <div class="image">
-                        <img src="Images/book5.jpg" alt="">
-                    </div>
-                    <div class="content">
-                        <h3>new arrivals</h3>
-                        <div class="price">$15.90 <span>$20.99</span></div>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
                         </div>
                     </div>
                  </a>
@@ -424,14 +424,30 @@
     </div>
 
     <div class="arrivals-slider">
-        <div class="wraper">
+        <div class="wrapper">
                  <a href="#" class="box">
                     <div class="image">
-                        <img src="Images/book6.jpg" alt="">
+                        <img src="Images/book6.jpg" alt="Dreyer's English Book Cover">
                     </div>
                     <div class="content">
-                        <h3>new arrivals</h3>
-                        <div class="price">$15.90 <span>$20.99</span></div>
+                        <h3>Dreyer's English</h3>
+                        <div class="price">$14.99 <span>$19.99</span></div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
+                 </a>
+                 <a href="#" class="box">
+                    <div class="image">
+                        <img src="Images/book7.jpg" alt="Computer Studies Book Cover">
+                    </div>
+                    <div class="content">
+                        <h3>Computer Studies</h3>
+                        <div class="price">$29.99 <span>$34.99</span></div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -443,11 +459,27 @@
                  </a>
                  <a href="#" class="box">
                     <div class="image">
-                        <img src="Images/book7.jpg" alt="">
+                        <img src="Images/book8.jpg" alt="Computer Science Book Cover">
                     </div>
                     <div class="content">
-                        <h3>new arrivals</h3>
-                        <div class="price">$15.90 <span>$20.99</span></div>
+                        <h3>Computer Science</h3>
+                        <div class="price">$31.99 <span>$36.99</span></div>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
+                 </a>
+                 <a href="#" class="box">
+                    <div class="image">
+                        <img src="Images/book9.jpg" alt="Technology and Society Book Cover">
+                    </div>
+                    <div class="content">
+                        <h3>Technology and Society</h3>
+                        <div class="price">$28.99 <span>$33.99</span></div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -459,49 +491,17 @@
                  </a>
                  <a href="#" class="box">
                     <div class="image">
-                        <img src="Images/book8.jpg" alt="">
+                        <img src="Images/book10.jpg" alt="IT Tools and Application Book Cover">
                     </div>
                     <div class="content">
-                        <h3>new arrivals</h3>
-                        <div class="price">$15.90 <span>$20.99</span></div>
+                        <h3>IT Tools and Application</h3>
+                        <div class="price">$19.99 <span>$24.99</span></div>
                         <div class="stars">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                        </div>
-                    </div>
-                 </a>
-                 <a href="#" class="box">
-                    <div class="image">
-                        <img src="Images/book9.jpg" alt="">
-                    </div>
-                    <div class="content">
-                        <h3>new arrivals</h3>
-                        <div class="price">$15.90 <span>$20.99</span></div>
-                        <div class="stars">
                             <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
-                        </div>
-                    </div>
-                 </a>
-                 <a href="#" class="box">
-                    <div class="image">
-                        <img src="Images/book10.jpg" alt="">
-                    </div>
-                    <div class="content">
-                        <h3>new arrivals</h3>
-                        <div class="price">$15.90 <span>$20.99</span></div>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
                         </div>
                     </div>
                  </a>
