--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
+    <!-- Loading Animation -->
+    <div class="loading-screen" id="loading-screen">
+        <div class="loader">
+            <i class="fas fa-book-open"></i>
+            <p>Loading Book Store...</p>
+        </div>
+    </div>
 
 <!---header section--->
 <header class="header">
@@ -29,7 +36,9 @@
        <div class="icons">
         <div id="search-btn" class="fas fa-search"></div>
         <a href="#" class="fas fa-heart"></a>
-        <a href="#" class="fas fa-shopping-cart"></a>
+        <a href="#" class="fas fa-shopping-cart" id="cart-icon">
+            <span class="cart-count">0</span>
+        </a>
         <div id="login-btn" class="fas fa-user"></div>
 
 
@@ -516,6 +525,33 @@
 
 
 
+
+    <!-- Quick View Modal -->
+    <div class="quick-view-modal" id="quick-view-modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <div class="modal-body">
+                <div class="book-image">
+                    <img id="modal-book-image" src="" alt="">
+                </div>
+                <div class="book-details">
+                    <h2 id="modal-book-title"></h2>
+                    <div class="price" id="modal-book-price"></div>
+                    <div class="stars" id="modal-book-stars"></div>
+                    <p id="modal-book-description"></p>
+                    <div class="modal-actions">
+                        <button class="btn add-to-cart-modal">Add to Cart</button>
+                        <button class="btn wishlist-btn">Add to Wishlist</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Back to Top Button -->
+    <button id="back-to-top" class="back-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
 
 <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
