--- a/index.html
+++ b/index.html
@@ -338,9 +338,9 @@
 
 <section class="arrivals" id="arrivals">
     <h1 class="heading"> <span>new arrivals</span></h1>
-    <div class="arrivals-slider">
-        <div class="wraper">
-                 <a href="#" class="box">
+    <div class="swiper arrivals-slider">
+        <div class="swiper-wrapper">
+                 <a href="#" class="swiper-slide box">
                     <div class="image">
                         <img src="Images/book1.jpg" alt="">
                     </div>
@@ -356,7 +356,7 @@
                         </div>
                     </div>
                  </a>
-                 <a href="#" class="box">
+                 <a href="#" class="swiper-slide box">
                     <div class="image">
                         <img src="Images/book2.jpg" alt="">
                     </div>
@@ -372,7 +372,7 @@
                         </div>
                     </div>
                  </a>
-                 <a href="#" class="box">
+                 <a href="#" class="swiper-slide box">
                     <div class="image">
                         <img src="Images/book3.jpg" alt="">
                     </div>
@@ -388,7 +388,7 @@
                         </div>
                     </div>
                  </a>
-                 <a href="#" class="box">
+                 <a href="#" class="swiper-slide box">
                     <div class="image">
                         <img src="Images/book4.jpg" alt="">
                     </div>
@@ -404,7 +404,7 @@
                         </div>
                     </div>
                  </a>
-                 <a href="#" class="box">
+                 <a href="#" class="swiper-slide box">
                     <div class="image">
                         <img src="Images/book5.jpg" alt="">
                     </div>
@@ -423,9 +423,9 @@
         </div>
     </div>
 
-    <div class="arrivals-slider">
-        <div class="wraper">
-                 <a href="#" class="box">
+    <div class="swiper arrivals-slider">
+        <div class="swiper-wrapper">
+                 <a href="#" class="swiper-slide box">
                     <div class="image">
                         <img src="Images/book6.jpg" alt="">
                     </div>
@@ -441,7 +441,7 @@
                         </div>
                     </div>
                  </a>
-                 <a href="#" class="box">
+                 <a href="#" class="swiper-slide box">
                     <div class="image">
                         <img src="Images/book7.jpg" alt="">
                     </div>
@@ -457,7 +457,7 @@
                         </div>
                     </div>
                  </a>
-                 <a href="#" class="box">
+                 <a href="#" class="swiper-slide box">
                     <div class="image">
                         <img src="Images/book8.jpg" alt="">
                     </div>
@@ -473,7 +473,7 @@
                         </div>
                     </div>
                  </a>
-                 <a href="#" class="box">
+                 <a href="#" class="swiper-slide box">
                     <div class="image">
                         <img src="Images/book9.jpg" alt="">
                     </div>
@@ -489,7 +489,7 @@
                         </div>
                     </div>
                  </a>
-                 <a href="#" class="box">
+                 <a href="#" class="swiper-slide box">
                     <div class="image">
                         <img src="Images/book10.jpg" alt="">
                     </div>
